# hello-brick

./: LICENSE  README.md  hello-brick.cabal  stack.yaml
src/: Main.hs
