cabal-version:       2.4
name:                hello-brick
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              astynax
build-type:          Simple

executable hello-brick
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , vty
